--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "underscore": "~1.4.4",
     "backbone.marionette": "~1.0.3",
     "backbone.localStorage": "~1.1.4",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "requirejs-tpl": "*"
   }
 }
